# boxtrot

./: LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
src/boxtrot/: boxtrot.py
