[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="boxtrot"
version="0.0.1"
description="A wrapper around prtree for box intersection querries."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
dependencies = [
    "python_prtree",
    "duckdb",
    "pandas",
    "numpy",
    "numba",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
    "ipython",
    "matplotlib",
]

# [project.scripts]
# example_shell_script = "boxtrot.cli.example_shell_script:example_shell_script"

[project.urls]
homepage="https://github.com/MatteoLacki/boxtrot.git"
repository="https://github.com/MatteoLacki/boxtrot.git"

[tool.uv]
reinstall-package = ["boxtrot"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-data]
# boxtrot = ["data/*.csv"]
